Mock AppManager in UserControllerTest